# Physical-AI-Humanoid-Book

./: .env.example  .eslintignore  .gitignore  404.html  BACKEND_ALTERNATIVES.md  CHATBOT_INTEGRATION.md  CHATBOT_INTEGRATION_COMPLETE.md  DEPLOYMENT.md  README.md  TESTING.md  USER_GUIDE.md  create_spec.ps1  docusaurus.config.js  docusaurus.config.ts  index.html  learning.html  markdown-page.html  package-lock.json  package.json  sidebars.js  sidebars.ts  sitemap.xml  test.html
.claude/: settings.local.json
.specify/memory/: constitution.md
assets/css/: styles.685251cc.css
assets/js/: 00c11e11.21234ad9.js  05bcb62f.aaa9c6a0.js  0e384e19.0e51c40b.js  145208de.5df80732.js  14eb3368.d738b3b4.js  17896441.0caafe15.js  1df93b7f.81e47527.js  1f391b9e.3ed5c7b4.js  (+34 more)
backend/: .env.example  .gitignore  README.md  TEST_RESULTS.md  check_qdrant.py  check_qdrant_status.py  crawl_site.py  discovered_urls.txt  embed_local_docs.py  generate_urls.py  ingest.py  main.py  mock_translation_server.py  pyproject.toml  rag_agent.py  requirements.txt  retrieval.py  suite_results.json  test_queries.json  test_retrieval.py  urls.txt  validate_integrity.py  verify_pipeline.py
backend/config/: logging_config.py
backend/models/: __init__.py  request_models.py  translation_models.py
backend/routers/: translation.py
backend/utils/: token_counter.py
docs/: DOCUSAURUS_RESEARCH_SUMMARY.md  intro.html
hf-deploy/: Dockerfile  README.md  exceptions.py  requirements.txt
roboticAI_book/: .markdownlint.json  docusaurus.config.ts  package.json  sidebars.ts
src/: clientModule.js
(+323 files in other folders)
